src/tui/snapshots/rara__tui__auth_mode_picker__tests__auth_mode_picker_local.snap
---
source: src/tui/auth_mode_picker.rs
assertion_line: 82
expression: popup
---
Codex needs authentication before this preset can be used.

Choose one auth mode below.

Current model: -
Provider: codex
Credential status: not-required

> Browser login
    Best for local desktop sessions with a localhost callback.
  Device code
    Best for SSH/headless sessions. Open the URL elsewhere and enter the one-time code.
  API key
    Paste an existing Codex API key and save it locally.
  Logout
    Clear the saved provider credential and rebuild the current codex backend.

Up/Down move  Enter choose  number keys jump  default: browser login  Esc back
